# remark-note-app

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  main.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 2025_02_23_1919-52e451c86343_create_note_table.py  2025_02_23_2114-9c8ad1cc858f_add_created_at_and_updated_at_fields_in_.py  2025_02_26_2123-2f4a6533edc4_user_table.py  2025_02_26_2208-19f71d675e2a_acces_token.py  2025_02_28_1637-b1a32ce30785_relationship_between_user_and_notes.py  2025_03_06_1041-7f0a61684030_add_column_in_favorites.py  2025_03_12_1710-8a33542ec71a_.py
app/api/: __init__.py  auth.py  notes.py  users.py
app/api/dependencies/: fastapi_users.py  strategy.py
app/core/: config.py  cors.py
app/core/auth/: transport.py  user_manager.py
app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  notes.py  users.py
app/core/repository/: abc_repository.py  notes.py  sqlaclhemy_repository.py  users.py
app/core/schemas/: base.py  notes.py  users.py
app/core/services/: base.py  notes.py  notes_service.py  users.py
app/core/types/: exceptions.py  user_id.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: api.js  authService.js  noteService.js  userService.js
frontend/src/components/: AppDescription.jsx  Devices.jsx  Footer.jsx  Header.jsx  MainHeader.jsx  NoteTextField.jsx  TabLine.jsx  WorkSpaceSideBar.jsx
frontend/src/pages/: AuthPage.jsx  MainPage.jsx  (+2 more)
(+17 files in other folders)
